[package]
name = "solana-sbf-rust-noop"
version = "1.8.0"
description = "BBAChain SBF noop program written in Rust"
authors = ["Maintainers <maintainers@bbachain.com>"]
repository = "https://github.com/bbachain/bbachain"
license = "Apache-2.0"
homepage = "https://bbachain.com/"
edition = "2021"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.4.16"
thiserror = "1.0"

[workspace]
members = []

[lib]
name = "solana_sbf_rust_noop"
crate-type = ["cdylib"]
